fix: input-group btn z-index

--- a/src/unicms_template_unical/static/css/unicms_unical.scss
+++ b/src/unicms_template_unical/static/css/unicms_unical.scss
@@ -678,3 +678,8 @@ input.top-input::placeholder {
 .row {
     --bs-gutter-x: 12px;
 }
+
+.input-group-append .btn,
+.input-group-prepend .btn {
+    z-index: inherit;
+}
